 + Precise + cursor move keys move camera slower
 + New chat command: “/help room” (shows room chat commands within the game)
 + Default demo fast-forward key changed from “S” to “F”
 + Default fallback Sudden Death music of themes (fallback-sd-music) is now sdmusic.ogg
 * Fix broken default keyboard controls for team chat and camera movement

Graphics:
 * Fix speech bubbles overlapping in the wrong order
 * Fix wrong ice beam angle if it goes diagonally up out of map through world wrap
 * Fix double water splash when flying saucer drowns
 * Fix odd floating pixels when wielding and rotating cleaver
 * Fix birdy being drawn behind hedgehogs and objects

Game HUD:
 + Display current hog health (and related status icons) at top right corner
 + Display laser sight icon above wind bar when laser sight utility is active
 + Display selected weapon above hedgehog for some weapons/tools
 + Change cursor of piano strike
 + Colorize switching arrows, pointing arrow and target cross in clan color
 + Skip ammo menu animation when playing with turn time of 10s or less
 + Don't show crate spawn message for initial crates in missions
 + Don't show hedgehog health if “invulnerable” game modifier is active
 + Display player name of own teams in online games
 + Show contour of flying saucer when in highly opaque water
 + Remove visual clutter in cut scenes
 + Add setting to set default/initial zoom
 * Black clan color can now be used without visual problems
 * Fix last 2 characters in demo chat being missing
 * Hide most HUD elements in cinematic mode
 * Don't show "F1", "F2", etc. in ammo menu if these aren't the actual slot keys
 * Fix wind bar animation not looping properly
 * Fix airplane line being drawn above many HUD elements
 * Suppress “<team> is gone.” message at end of game
 * Fix game engine ignoring appropriate number formatting of user language
 * Fix buggy behaviour when entering speech bubble command in hog placement phase

Translations:
 + Major update: Chinese